Checking failing signature

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,10 +11,10 @@ name = "schnorrkel_crust"
 crate-type = ["cdylib", "staticlib"]
 
 [dependencies]
-schnorrkel = { version="0.9.1" }
+schnorrkel = { version="0.10.1", features = ["preaudit_deprecated", "u64_backend"] }
 ed25519-dalek = { version="1.0.0" }
 rand_chacha = "0.2.2"
-merlin = { version = "2.0", default-features = false }
+merlin = { version = "3.0", default-features = false }
 
 [dev-dependencies]
 hex-literal = "0.3.1"
