--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -6,16 +6,13 @@ find_package(GMock CONFIG REQUIRED)
 hunter_add_package(Microsoft.GSL)
 find_package(Microsoft.GSL CONFIG REQUIRED)
 
-if(TARGET schnorrkel_crust)
-    message(INFO Found)
-endif()
-
 addtest(sr25519_test
         sr25519/ds.cpp
         sr25519/derive.cpp
         sr25519/keypair_from_seed.cpp
         sr25519/vrf.cpp
         sr25519/keccak.c
+        sr25519/tmp.cpp
     )
 target_link_libraries(sr25519_test
     schnorrkel_crust
